
     * Now reads files that are open in Excel without having to close them first, #2661. And up to 5 attempts
       are made every 250ms on Windows as recommended here : http://support.microsoft.com/kb/316609.

     * "nan%" observed in output of fread(...,verbose=TRUE) timings are now 0% when fread takes 0.000 seconds.

  o  "Uniqueness" tests can now specify arbirtray combinations of columns to use to test for duplicates.
    `by.columns` parameter added to unique.data.table and duplicated.data.table. This allows the user to
     test for uniqueness using any combination of columns in the data.table, where previously the user only
     had the option to use the keyed columns (if keyed) or all columns (if not). The default behavior sets
     `by.columns=key(dt)` to maintain backward compatability. See man/duplicated.Rd and tests 986:991 for
     more information. Thanks to Arunkumar Srinivasan, Ricardo Saporta, and Frank Erickson for useful
     discussions.

BUG FIXES

  o  merge now properly handles data.tables with zero-rows. This was bug # 2633.
     Thank you to Vinicius Almendra for submitting it.

  o  rbind now handles data.tables and lists with non-standard and/or duplicate names.
     These were bugs # 2726 & # 2384 Thank you to Garrett See.

  o  rbind, cbind and merge on data.table should now work in packages that Import but do not
     Depend on data.table. Many thanks to a patch to .onLoad from Ken Williams, and related
     posts from Victor Kryukov :
	     http://r.789695.n4.nabble.com/Import-problem-with-data-table-in-packages-tp4665958.html

  o  Mixing adding and updating into one DT[, `:=`(existingCol=...,newCol=...), by=...] now works
     without error or segfault, #2778 and #2528. Many thanks to Arunkumar Srinivasan for reporting
     and for the nice reproducible examples. Tests added.

  o  rbindlist() now binds factor columns correctly, #2650. Thanks to Ricardo Saporta for
     reporting. Test added.
     