@@ -54,6 +54,9 @@ NEW FEATURES
        are made every 250ms on Windows as recommended here : http://support.microsoft.com/kb/316609.
 
      * "nan%" observed in output of fread(...,verbose=TRUE) timings are now 0% when fread takes 0.000 seconds.
+     
+     * An unintended 50,000 column limit has been removed. Thanks to mpmorley for reporting. Test added.
+         http://stackoverflow.com/questions/18449997/fread-protection-stack-overflow-error
 
   o  "Uniqueness" tests can now specify arbirtray combinations of columns to use to test for duplicates.
     `by.columns` parameter added to unique.data.table and duplicated.data.table. This allows the user to
@@ -120,7 +123,7 @@ NOTES
      And a pointer to ?truelength has been added to an error message as sugggested and thanks to Roland :
        http://stackoverflow.com/questions/15436356/potential-problems-from-over-allocating-truelength-more-than-1000-times
 
-  o  There are now 985 raw tests, as reported by test.data.table().
+  o  There are now 994 raw tests, as reported by test.data.table().
 
 
         *********************************************
